--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.924.0",
+    "camelcase": "^5.3.1",
     "if-env": "^1.0.4",
     "uuid": "^8.3.2"
   },
