--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aws-sdk": "^2.924.0",
     "camelcase": "^5.3.1",
     "if-env": "^1.0.4",
+    "multer": "^1.4.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
