--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "aws s3 sync build/ s3://user-images-92522fe4-9bbb-48e1-97b4-2e2870a49451"
   },
   "eslintConfig": {
     "extends": "react-app"
