--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:prod": "cd server && npm start",
     "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build",
+    "deploy": "aws s3 sync build/ s3://user-images-92522fe4-9bbb-48e1-97b4-2e2870a49451"
   },
   "keywords": [],
   "author": "",
